
2020-04-28  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-download.el (w3m-download-queue-mode): disable undo in download buffer.
	(w3m--download-queue-adjust): change position of mutex, allow operation
	for all queues.
	(w3m--download-queue-adjust, w3m-download-queue-raise)
	(w3m-download-queue-drop): Use prefix-arg to move multiple positions in queues.

2019-12-18  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-download.el (w3m-download-video-alist): Add entry for youtu.be.
	(w3m-download-using-w3m): Replace obsolete function w3m-touch-file with
	set-file-times (part of drop of xemacs support).

2019-12-15  Boruch Baum  <boruch_baum@gmx.com>

	*  (w3m--download-sentinel): When wget completes successfully, but
	issues an exit code '4' to indicate a network anomaly, treat the
	download as 'probably' successful.
	(w3m-download-using-wget): For pathnames of saved files, convert
	embedded spaces to underscores.

2019-11-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	Make it fast to load w3m.elc (issue #73)

	Change the way to update the value of `w3m-content-type-alist' so to do
	on demand instead of updating it fully according to `mailcap-mime-data'
	at the startup.  For example, the initial viewing method for the
	content type "image/jpeg" is `(mailcap-mime-info "image/jpeg")', but
	when viewing a jpeg image for the first time it will be replaced with
	`("real-viewer" file)'.
	* w3m.el (w3m-content-type-alist): Don't parse mailcap-mime-data.
	(w3m-external-view): Parse mailcap-mime-data and update
	w3m-content-type-alist.

2019-07-03  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m--filter-page-anchors): New feature to prune junk anchors
	from anchor searches.
	(w3m-anchor-list-filter-alist): Junk anchor defcustom.
	(w3m--get-page-anchors): Implement the feature.

2019-07-02  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-hist.el (w3m-history-scrub): Render display earlier. Initialize
	arrived-db for awesome-bar feature support.

2019-07-02  Boruch Baum  <boruch_baum@gmx.com>
