@@ -252,6 +252,18 @@
 	(w3m--download-queue-adjust, w3m-download-queue-raise)
 	(w3m-download-queue-drop): Use prefix-arg to move multiple positions in queues.
 
+2020-03-14  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	Distinguish two or more consecutive same images (issue #76)
+
+	* w3m.el (w3m-fontify-images): Mark an image with seq#.
+	(w3m-search-for-next-image, w3m-search-for-previous-image):
+	New functions that use seq# for searching for an image boundary.
+	(w3m-toggle-inline-images-internal, w3m-toggle-inline-image)
+	(w3m-toggle-inline-image, w3m-resize-inline-image-internal)
+	(w3m-goto-next-image, w3m-goto-previous-image): Use them.
+	(w3m-next-image, w3m-previous-image): Simplify.
+
 2019-12-18  Boruch Baum  <boruch_baum@gmx.com>
 
 	* w3m-download.el (w3m-download-video-alist): Add entry for youtu.be.
